--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +8,6 @@
 <body>
     <h1>Exibindo o Github em aula</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis adipisci fuga deserunt rem inventore pariatur alias, nihil enim ab doloribus debitis iusto unde sapiente illum perspiciatis quia sint mollitia distinctio!</p>
+    <h2>Segunda alteração do nosso código.</h2>
 </body>
 </html>
